--- a/Dino/Dino/Assembly-CSharp.csproj
+++ b/Dino/Dino/Assembly-CSharp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\MovingPlatform.cs" />
     <Compile Include="Assets\Scripts\PauseMenu.cs" />
+    <Compile Include="Assets\Scripts\Settings.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>D:/University/COURSEWORK/Dino/Dino/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
