--- a/Dino/Dino/Assembly-CSharp.csproj
+++ b/Dino/Dino/Assembly-CSharp.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Assets\Scripts\CoinPick.cs" />
     <Compile Include="Assets\Scripts\Dino.cs" />
     <Compile Include="Assets\Scripts\DinoController.cs" />
-    <Compile Include="Assets\Scripts\DinoHeartScale.cs" />
+    <Compile Include="Assets\Scripts\DinoHealth.cs" />
     <Compile Include="Assets\Scripts\DinoStarsScale.cs" />
     <Compile Include="Assets\Scripts\EndLevelMenu.cs" />
     <Compile Include="Assets\Scripts\Enemy.cs" />
